# spotify-overlay

./: CMakeLists.txt  main.cpp
include/: animation.hpp  spotify_track.hpp
src/: animation.cpp  main.cpp  spotify_track.cpp
